# VERIFARM2

./: .env.example  .gitignore  README.md  docker-compose.yml
.design-sync/: config.json
.design-sync/previews/: BarChartComponent.tsx  DataTable.tsx  ImageWithFallback.tsx  Insight.tsx  LoginPage.tsx
.github/workflows/: ci.yml
backend/: .dockerignore  Dockerfile  conftest.py  main.py  pytest.ini  requirements-dev.txt  requirements.txt  run_mcp.py  test_python.py
backend/app/: main.py  ratelimit.py
backend/app/agent/: copilot.py  cypher_guard.py  cypher_tool.py  events.py  graph.py  prompts.py  qwen_llm.py  render.py  router.py  tools.py
backend/tests/: test_agent_logic.py  test_api_routes.py  test_bulk.py  test_bulk_spatial.py  test_claim_bridge.py  test_connector_integration.py  test_data_generation.py  test_http_client.py  test_investigator_policy.py  test_mcp_remote.py  test_mcp_service.py  test_ocr_real_image.py  test_registry_cache.py  test_reified_guard.py  test_router.py  test_sprint2_core.py  test_sprint3_egress.py  test_streaming.py
cli/: README.md  pyproject.toml
cli/verifarms_cli/: __init__.py  client.py  config.py  formatting.py  main.py  util.py
cli/verifarms_cli/commands/: auth.py  export.py  get.py
data-pipeline/: .dockerignore  Dockerfile  generate_synthetic.py  neo4j_loader.py  requirements.txt
frontend/: package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo
legacy-frontend-prototype/: README.md  index.html
scripts/: demo_phase1.sh  demo_phase2.sh  demo_phase3.sh  demo_phase4.sh  demo_phase5.sh
(+168 files in other folders)
