[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "verifarms-cli"
version = "0.1.0"
description = "Command-line client for the VeriFarms verified-claims Egress API."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "typer>=0.12",
    "rich>=13.0",
    "httpx>=0.27",
    "pydantic>=2.6",
]

[project.scripts]
# Exposes the `verifarms` command after `pip install .`
verifarms = "verifarms_cli.main:app"

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.hatch.build.targets.wheel]
packages = ["verifarms_cli"]
